# Summer-Research---VLA-ArmPi-Ultra

./: .gitignore  CLAUDE.md  Daily Update.txt  ROS2 commands.ws  camera_stream.py  grayscale.py  install_pi.sh  install_piper.sh  install_stt.sh  main.py  voice_arm_control.py  ~WRL3072.tmp
.claude/: AGENTS_README.md
.claude/agents/: robotics-researcher.md  ros2-coder.md
.claude/workflows/: research-plan.js
Documents/: COMMANDS.md  Generated_Action_Plan.md  PLAN.md  Research Proposal.docx  lab_protocols.md  session_handoff_2026-06-23.md  session_handoff_2026-06-25.md  session_handoff_2026-07-21.md  writeup_draft.md  writeup_skeleton.md  ~$search Proposal.docx
armpi_voice/: README.md  chat.sh  package.xml  setup.cfg  setup.py
armpi_voice/armpi_voice/: arm_agent.py  arm_console.py  eval_analysis.py  eval_runner.py  planar_calib.py  planar_common.py  planar_pick.py  scene_describe.py  stt_node.py  trial_log.py  tts_node.py  voice_arm_control.py
armpi_voice/launch/: chat.launch.py
armpi_voice/test/: test_planar_math.py
